---------------------------------------------------------------------------------------------------
Version: 0.69.119
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.118
Date: 2025-09-21
  Changes:
    - ESI compatibility restored.
---------------------------------------------------------------------------------------------------
Version: 0.69.117
Date: 2025-09-20
  Changes:
    - Collab with Kiplacon complete. Now, thrower inserters from Renai Transportation have unique trajectories while on Rubia.
    - Identified severe incompat with Exotic Space Industries. I'm marking it as incompatible."
    - Wind fix workaround for the latest version of factorio.
---------------------------------------------------------------------------------------------------
Version: 0.69.116
Date: 2025-09-15
  Changes:
    - Fixed typo on cargo landing pad modifier.
    - More lore. He can't be stopped.
    - Fixed RNG of lore again, so they aren't coupled to each other.
    - Fixed incompatibility issue with Therenas' Simple adjustable inserters.
    - Armored trains make more smoke to make it more obvious at high speed.
---------------------------------------------------------------------------------------------------
Version: 0.69.115
Date: 2025-09-13
  Changes:
    - Rubia is now compatible with all of Bob's modpack!
    - Rubia is now compatible with entity cloning from editor.
---------------------------------------------------------------------------------------------------
Version: 0.69.114
Date: 2025-09-11
  Changes:
    - Additional safeguards against old version change warnings from freaking you out.
    - Specific key forageable items on Rubia now scale with your Rubia-specific tech cost multiplier. This reduces how much foraging you need to do at high tech cost multiplier. This only affects gameplay with Rubia's mod-settings.