@@ -2,6 +2,7 @@
 Version: 0.69.119
 Date: ????
   Changes:
+    - Blacklisted several items from Pneumatic Transport mods (mods that turn all solids to liquids, and removes all belts) because they basically invalidate Rubia.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.118
 Date: 2025-09-21
